--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <title>Mini App</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+
+    <script setup>
+      document.getElementById('button1').addEventListener('click', function() {
+        Telegram.WebApp.sendData('BUTTON1');
+      });
+    </script>
   </body>
 </html>
