--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <title>Mini App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+		
+	</div>
     <script type="module" src="/src/main.js"></script>
 
-    <script setup>
-      document.getElementById('button1').addEventListener('click', function() {
-        Telegram.WebApp.sendData('BUTTON1');
-      });
-    </script>
+   
   </body>
 </html>
